--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "type":"module",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/_mocha"
+    "test": "node ./node_modules/mocha/bin/_mocha ejemplos/test/**/*.js",
+    "test2": "node ./node_modules/mocha/bin/_mocha ejemplos/test2/**/*.js",
+    "testRick": "node ./node_modules/mocha/bin/_mocha js/test/**/*.js"
   },
   "keywords": [
     "mocha",
