--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Trabajo de Fermin",
   "main": "main.js",
-  "type":"module",
-  "scripts": {
-    "test": "node ./node_modules/mocha/bin/_mocha ejemplos/test/**/*.js",
-    "test2": "node ./node_modules/mocha/bin/_mocha ejemplos/test2/**/*.js",
-    "testRick": "node ./node_modules/mocha/bin/_mocha js/test/**/*.js"
-  },
+  "type": "module",
+"scripts": {
+"test": "node ./node_modules/mocha/bin/_mocha ejemplos/test/**/*.js",
+"testRick": "node ./node_modules/mocha/bin/_mocha js/test/**/*.js",
+"testMochawesome": "node ./node_modules/mocha/bin/_mocha js/test/**/*.js --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=report,charts=true,autoOpen=true"
+},
   "keywords": [
     "mocha",
     "chai",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "mochawesome": "^7.1.3"
   }
 }
