Specify mochai&chai version in json

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   ],
   "author": "marcos&cesar",
   "license": "ISC",
-  "devDependencies": {
-    "chai": "*",
-    "mocha": "*",
+"devDependencies": {
+"chai": "^5.1.2",
+"mocha": "^11.1.0",
     "mochawesome": "^7.1.3"
   }
 }
