--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Trabajo de Fermin",
   "main": "main.js",
   "type": "module",
-"scripts": {
-"test": "node ./node_modules/mocha/bin/_mocha test/ejemplos/**/*.js",
-"testApi": "node ./node_modules/mocha/bin/_mocha test/services/**/*.js",
-"report": "node ./node_modules/mocha/bin/_mocha test/{ejemplos,services}/*.js --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=report,charts=true,autoOpen=true"
-},
+  "scripts": {
+    "test": "node ./node_modules/mocha/bin/_mocha test/ejemplos/**/*.js",
+    "testApi": "node ./node_modules/mocha/bin/_mocha test/services/**/*.js",
+    "report": "node ./node_modules/mocha/bin/_mocha test/{,services}/*.js --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=report,charts=true,autoOpen=true"
+  },
   "keywords": [
     "mocha",
     "chai",
@@ -16,9 +16,9 @@
   ],
   "author": "marcos&cesar",
   "license": "ISC",
-"devDependencies": {
-"chai": "^5.1.2",
-"mocha": "^11.1.0",
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.1.0",
     "mochawesome": "^7.1.3"
   }
 }
